<resources>
    <string name="app_name">Cake4U</string>
    <string name="Login_button">Login</string>
    <string name="Register_button">Register</string>
    <string name="Email_text">Email</string>
    <string name="Password_text">Password</string>
    <string name="OurApp">Cake4U</string>
    <string name="haveaccount">Already Have An Account?</string>
    <string name="Haveaccount">Login</string>
    <string name="home_login">Login</string>
    <string name="home_register">Register</string>
    <string name="ourcakes">Cakes</string>
    <string name="home_about">About Us</string>
    <string name="info">Delivery Info</string>
    <string name="category_home">Home</string>
    <string name="categorylogout">Logout</string>
    <string name="Category">Categories</string>
    <string name="categorywedding">Wedding Cakes</string>
    <string name="categorybirthday">Birthday Cakes</string>
    <string name="categoryother">Others</string>
    <string name="birthday">Categories</string>
    <string name="birthdaycategory">Birthday Cakes</string>
    <string name="birthdayadd">ADD</string>
    <string name="weddingcake">Wedding cakes</string>
    <string name="other">Other Cakes</string>
    <string name="addcard">Add Card Details</string>
    <string name="add">Confirm</string>
    <string name="cardtype">Card Type</string>
    <string name="cardno">Card Number</string>
    <string name="cardamount">Amount</string>
    <string name="cardt">Visa/Master/Paypal</string>
    <string name="no">1234567</string>
    <string name="amount">1111.00</string>
    <string name="about">About Us</string>
    <string name="aboutus">Cake4U was found by Mr. Lasith in 2018. It has its branches in Colombo and Jaffna. Its bigbstrength is the well experience in cake making. Its hot line 0112001122.</string>
    <string name="customer">Add Delivery Details</string>
    <string name="deliveryname">Full Name</string>
    <string name="deliveryadd">Address</string>
    <string name="deliveryphone">Phone No</string>
    <string name="name">S. Perera</string>
    <string name="address">No 6, Bharathy Lane, Wellawatta, Colombo</string>
    <string name="cusphone">0775674567</string>
    <string name="cusconfirm">Confirm</string>
    <string name="aboutcard">Words on cake</string>
    <string name="cusname">Name</string>
    <string name="itsyou">Your Details</string>
    <string name="editt">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="card">Your Card</string>
    <string name="yourorder">Your Order</string>
    <string name="deliverydetails">Delivery Details</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total Price</string>
    <string name="pricee">1200.00</string>
    <string name="addc">Add Card</string>
    <string name="forget">Forgot Password?</string>
</resources>
